<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20sp"
        android:gravity="end"
        android:text="@string/comment"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_popup_border"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="clip_vertical"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="#147581"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="#147581"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>